--- a/school/template/school/base.html
+++ b/school/template/school/base.html
@@ -67,6 +67,10 @@
         <a class="nav-link" href="{% url 'contact-page' %}">Contact</a>
       </li>
 
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'score-page' %}">Score</a>
+      </li>
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
